# GranEye

./: README.md  pyproject.toml
graneye/: __init__.py  cli.py  clustering.py  detection.py  extraction.py  models.py  normalization.py  pipeline.py  resolution.py  search.py
graneye/analyzers/: base.py  rule_based.py
scripts/: run_validation_cases.sh
tests/: test_directory_detection.py  test_identity_resolution.py
tests/integration/: test_public_api_stability.py
tests/unit/: test_cli.py  test_directory_detection.py  test_identity_resolution.py  test_multilingual_normalization.py  test_pipeline.py  test_search_duckduckgo.py  test_search_resolution.py
